refactor: ajustes em todos os services para que, eles sigam os mesmos padroes